# talk-to-gpt

./: Cargo.toml  Makefile  README.md
src/: chat_context.rs  gpt.rs  main.rs
